# LightningSim

./: .gitignore  Makefile  README.md
.github/workflows/: conda-build.yml
backend/: Cargo.toml  MANIFEST.in  pyproject.toml
backend/lightningsim/: _core.pyi  main.py  runner.py  simulator.py  trace_file.py
backend/lightningsim-core/: axi_interface.rs  edge.rs  fifo.rs  lib.rs  node.rs  simulation.rs
backend/lightningsim-core/builder/: axi_builder.rs  axi_rctl.rs  edge_builder.rs  event.rs  fifo_builder.rs  frame.rs  mod.rs  module_builder.rs  node.rs  tee.rs
backend/lightningsim/model/: __init__.py  basic_block.py  cdfg_edge.py  cdfg_region.py  dataflow.py  function.py  instruction.py  solution.py
benchmarks/: .gitignore  README.md  benchmark.py  environment.yml  measure_vhls.tcl
benchmarks/01_basic_examples_vhls_fixed_point_sqrt/: setup.tcl
benchmarks/02_basic_examples_vhls_fir_filter/: setup.tcl
benchmarks/03_basic_examples_vhls_fixed_point_window_conv/: setup.tcl
benchmarks/05_basic_examples_vhls_ap_arithmetic/: setup.tcl
benchmarks/06_basic_examples_vhls_parallel_loops/: setup.tcl
benchmarks/07_basic_examples_vhls_imperfect_loops/: setup.tcl
benchmarks/08_basic_examples_vhls_max_bounded_loop/: setup.tcl
benchmarks/09_basic_examples_vhls_perfect_nested_loops/: setup.tcl
benchmarks/10_basic_examples_vhls_pipelined_nested_loops/: setup.tcl
benchmarks/12_basic_examples_vhls_accs_w_asserts/: setup.tcl
benchmarks/13_basic_examples_vhls_accs_w_dataflow/: setup.tcl
benchmarks/14_basic_examples_vhls_static_memory/: setup.tcl
benchmarks/15_basic_examples_vhls_pointer_casting/: setup.tcl
benchmarks/16_basic_examples_vhls_double_pointer/: setup.tcl
benchmarks/17_basic_examples_vhls_axi_master/: setup.tcl
benchmarks/26_pp4fpgas_matmul/: setup.tcl
frontend/: index.html  package-lock.json  package.json
recipe/: build.sh  conda_build_config.yaml  meta.yaml
scripts/: generate_fifo_template.py
src/: fifo.cpp  fifo.ll.jinja  hlslitesim.hpp  m_axi.cpp  m_axi.ll.jinja  trace.cpp
(+90 files in other folders)
