[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "lightningsimv2"
authors = [
    {name = "Rishov Sarkar", email = "rishov.sarkar@gatech.edu"},
]
version = "0.2.0"

[tool.setuptools]
packages = ["lightningsimv2", "lightningsimv2.model"]

[tool.setuptools.package-dir]
lightningsimv2 = "lightningsim"

[[tool.setuptools-rust.ext-modules]]
target = "lightningsimv2._core"
debug = false
