[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "lightningsim"
authors = [
    {name = "Rishov Sarkar", email = "rishov.sarkar@gatech.edu"},
]
version = "0.2.2"

[tool.setuptools.packages.find]
namespaces = false

[[tool.setuptools-rust.ext-modules]]
target = "lightningsim._core"
debug = false
